[gd_scene load_steps=2 format=3 uid="uid://c85i0fjocegj6"]

[ext_resource type="Script" uid="uid://4ndai14rvwop" path="res://main/ui/general_menu/main_menu/main_menu.gd" id="1_hehni"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hehni")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 513.0
offset_top = 202.0
offset_right = 688.0
offset_bottom = 401.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 19
alignment = 1

[node name="Button_start_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "start game"
icon_alignment = 1

[node name="Button_settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "settings
"
icon_alignment = 1

[node name="Button_credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "credits
"

[connection signal="pressed" from="VBoxContainer/Button_start_game" to="." method="_on_button_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_start_game" to="." method="_on_Button_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_credits" to="." method="_on_button_credits_pressed"]
